Make warnings primary color to prevent contrast problems

--- a/src/common.css
+++ b/src/common.css
@@ -140,8 +140,8 @@ a {
 }
 
 .alert-warning {
-    background-color: #ffce23;
-    border-color: #ffce23;
+    background-color: #004c92;
+    border-color: #004c92;
 }
 
 .alert-success {
